--- a/package/Config.in
+++ b/package/Config.in
@@ -2,6 +2,7 @@ menu "Target packages"
 
 	source "package/busybox/Config.in"
 	source "package/skeleton/Config.in"
+	source "package/e2tally/Config.in"
 
 menu "Audio and video applications"
 	source "package/alsa-utils/Config.in"
