--- a/configs/rpi_e2tally_defconfig
+++ b/configs/rpi_e2tally_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2016.05-git-00995-g5652374-dirty Configuration
+# Buildroot 2016.05-git-00997-gd38c683-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_6=y
@@ -353,7 +353,7 @@ BR2_SYSTEM_DHCP="eth0"
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY=""
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi2/post-build.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT=""
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi2/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS=""
 
